# misi-bayang-gabungan-version2

./: FRONTEND_DEMO_SCRIPT.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/agent/: __init__.py  callbacks.py  cot_logger.py  coverage.py  interfaces.py  live_client.py  messages.py  mission_log.py  multi_orchestrator.py  orchestrator.py  pathfinder.py  prompts.py  real_mcp_client.py  state_builder.py  supervisor.py  window.py  worker.py
backend/logs/: mission_20260319T033502Z.jsonl  mission_20260319T035649Z.jsonl  mission_20260319T040918Z.jsonl  mission_20260319T041936Z.jsonl  mission_20260319T043709Z.jsonl  mission_20260319T045506Z.jsonl  mission_20260319T051015Z.jsonl  mission_20260319T052940Z.jsonl  mission_20260319T053101Z.jsonl  mission_20260319T053620Z.jsonl  mission_20260319T053743Z.jsonl  mission_20260319T055028Z.jsonl  mission_20260319T061422Z.jsonl  mission_20260319T090120Z.jsonl  mission_20260319T092344Z.jsonl  mission_20260319T095628Z.jsonl  mission_20260319T103033Z.jsonl  mission_20260319T132321Z.jsonl  mission_20260319T133007Z.jsonl  mission_20260320T015535Z.jsonl  mission_20260320T032340Z.jsonl  mission_20260320T032910Z.jsonl  mission_20260320T033149Z.jsonl  mission_20260320T041831Z.jsonl  mission_20260320T052841Z.jsonl  mission_20260320T053649Z.jsonl  mission_20260320T054112Z.jsonl  mission_20260320T055726Z.jsonl  mission_20260320T061704Z.jsonl  mission_20260320T064043Z.jsonl  mission_20260320T064450Z.jsonl  mission_20260320T064607Z.jsonl  mission_20260320T070322Z.jsonl  mission_20260320T071043Z.jsonl  (+24 more)
frontend/: dev.ts  (+5 more)
(+64 files in other folders)
