[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-ollama>=0.3.0",
  "langchain-core>=0.3.0",
  "python-dotenv>=1.0.0",
  "colorama>=0.4.6",
  "fastmcp>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
